--- a/style.css
+++ b/style.css
@@ -954,7 +954,7 @@ padding: 5px 10px;
   font-weight: 500;
 }
 .datpublication{
-  font-size: 10px;
+  font-size: 15px;
 
 }
 
@@ -1046,7 +1046,8 @@ transition: .2s ease;
   align-items: center;
 }
 .navbar_buttom i{
-  font-size: 1.5rem;
+  color: var(--second2-bg-color);
+  font-size: 1.6rem;
 }
 
 
@@ -1146,7 +1147,7 @@ transition: .2s ease;
 
     }
     .headerpublication p{
-      font-size: 0.6rem;
+      font-size: 0.7rem;
       color: var(--second2-bg-color);
     }
     .headerpublication i{
@@ -1163,8 +1164,13 @@ transition: .2s ease;
       color: var(--second2-bg-color);
     }
     .image_publicationbg{
-      height: 270px;
+      height: 350px;
     }
+    .image_publicationbg img {
+      height: 350px;
+
+    }
+
     .opt_addpublication2{
       font-size: 0.9rem;
     }
