--- a/style.css
+++ b/style.css
@@ -366,6 +366,8 @@ input:focus {
   }
   .btn.souvgarder:hover {
     background-color:rgb(0, 45, 0); 
+    color: #fff; 
+
   }
 
 
@@ -382,6 +384,8 @@ input:focus {
   }
   .btn.modifier:hover {
     background-color:rgb(135, 83, 0); 
+    color: #fff; 
+
   }
 
 
@@ -397,7 +401,9 @@ input:focus {
     transition:  0.3s; 
   }
   .btn.supprimer:hover {
-    background-color:rgb(135, 0, 0); 
+    background-color:rgb(135, 0, 0);
+    color: #fff; 
+ 
   }
   /*-----------------------------------------------------btn*/
 
@@ -1267,6 +1273,24 @@ transition: .2s ease;
   color: var(--bg-color);
 
 }
+.deconnection{
+  width: 50vw;
+  height: 50vh;
+  background-color: var(--bg-color);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+
+}
+.deconnection img{
+  height: 40%;
+  
+}
+.deconnection p{
+ font-size: 1.4rem;
+ font-weight: 500;
+}
 @media (max-width:617px){
     .bg_choix_user{
         width: 100vw;
@@ -1495,7 +1519,12 @@ transition: .2s ease;
       .photochanger i{
         font-size: 5rem;
       }
-      
+      .btns_bg_info{
+        flex-direction: column;
+      }
+      .deconnection{
+        width: 70%;
+      }
 
 
 }
