--- a/style.css
+++ b/style.css
@@ -647,6 +647,8 @@ input:focus {
 }
 
 .rightespace{
+  position: relative;
+  display: flex;
   width: 30%;
   min-height:100vh ;
 }
@@ -1507,6 +1509,220 @@ transition: .2s ease;
   font-weight: 600;
 }
 
+/* -----------------------------------messageCabine ------------------ */
+.discution_bg{
+ width: 30%;
+ height: 88%;
+ position: fixed;
+ right: 0;
+ background-color: var(--pub-bg-color);
+ overflow: hidden;
+ z-index: 250;
+}
+.header_message{
+  width: 100%;
+  padding: 10px;
+  height: 50px;
+  display: flex;
+  flex-direction: row;
+  background-color: var(--second2-bg-color);
+  align-items: center;
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
+}
+.header_message i{
+  font-size: 2rem;
+  color: var(--bg-color);
+  cursor: pointer;
+}
+.Image_header_message{
+  width: 25px;
+  height: 25px;
+  border-radius: 50%;
+  background-color: var(--bg-color);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+
+}
+.name_header_message{
+  padding: 10px;
+  height: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.name_header_message h1{
+  font-size: 1.3rem;
+  font-weight: 500;
+  color: var(--bg-color);
+  cursor: pointer;
+}
+.option_header_message{
+  width: 50px;
+  height: 50px;
+  display: none;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  right:  0;
+}
+.bottom_message{
+ width: 100%;
+ padding: 15px;
+ padding-bottom: 35px;
+ display: flex;
+ flex-direction: row;
+ justify-content: center;
+ align-items: center;
+ background-color: var(--second2-bg-color);
+ position: absolute;
+ bottom: 0;
+ right: 0;
+ border-top-left-radius:10px ;
+ border-top-right-radius: 10px;
+}
+.bottom_message i{
+  color: var(--bg-color);
+  font-size: 1.7rem;
+  cursor: pointer;
+}
+.sendImageicon{
+ width: 10%;
+ display: flex;
+ justify-content: center;
+ align-items: center;
+}
+.messageecrit{
+  width: 80%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.messageecrit{
+  width: 100%;
+  border-radius: 5px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: var(--bg-color);
+}
+.sendmessageicon{
+  width: 10%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.optionbg_wind{
+  position: absolute;
+  right: 0;
+  display: none;
+  width: 150px;
+  padding: 10px;
+  flex-direction: column;
+  background-color: #bcc9c148;
+  backdrop-filter: blur(10px);
+  -webkit-backdrop-filter: blur(10px); /* Ajout du préfixe -webkit- */
+  border-radius: 5px;
+}
+.optionbg_wind_btn{
+  width: 100%;
+  padding: 5px;
+  border-bottom: 1px solid var(--second2-bg-color);
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  transition: 0.3s ease;
+  border-radius: 5px;
+
+}
+.optionbg_wind_btn i{
+font-size: 1.2rem;
+color: var(--text-color);
+padding-right: 5px;
+cursor: pointer;
+}
+.optionbg_wind_btn p{
+  cursor: pointer;
+
+}
+.optionbg_wind_btn:hover{
+  background-color: var(--second-bg-color);
+}
+.content_message{
+  display: flex;
+  flex-direction: column;
+  overflow-y: scroll;
+  padding: 10px;
+}
+.monM_bg{
+  width: 100%;
+  display: flex;
+  justify-content: start;
+  align-items: center;
+}
+.mon_message {
+  display: flex;
+  position: relative;
+  left: 0;
+  max-width: 48%;
+  padding: 10px;
+  color: white;
+  background-color: var(--second2-bg-color);
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+  border-bottom-left-radius: 0px;
+  border-bottom-right-radius: 10px;
+}
+.autreM_bg{
+  width: 100%;
+  display: flex;
+  justify-content: end;
+  align-items: center;
+
+}
+.autre_message{
+  display: flex;
+  position: relative;
+  right: 0;
+  max-width: 48%;
+  padding: 10px;
+  color: var(--text-color);
+  background-color: var(--second-bg-color);
+  border-top-left-radius: 8px;
+  border-top-right-radius: 8px;
+  border-bottom-left-radius: 8px;
+  border-bottom-right-radius: -8px;
+}
+.content_message img{
+  width: 100px;
+  height: 100px;
+  border-radius: 5px;
+  object-fit: cover;
+}
+.content_message{
+  overflow-y: scroll;
+}
+.scrollButton {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 25px;
+  width: 100%;
+  position: absolute;
+  bottom: 120px;
+  z-index: 250;
+}
+
+.scrollButton i {
+  font-size: 2.3rem;
+  color: var(--second2-bg-color);
+}
+
+
 @media (max-width:617px){
     .bg_choix_user{
         width: 100vw;
@@ -1772,6 +1988,18 @@ transition: .2s ease;
         height: 100px;
 
       }
+      .discution_bg{
+        width: 100%;
+        height: 90%;
+       }
+       .bottom_message{
+        padding: 15px;
+
+       }
+
+       .option_header_message{
+        display: flex;
+       }
 
 }
 
