--- a/style.css
+++ b/style.css
@@ -1583,6 +1583,7 @@ transition: .2s ease;
  border-top-left-radius:10px ;
  border-top-right-radius: 10px;
 }
+
 .bottom_message i{
   color: var(--bg-color);
   font-size: 1.7rem;
@@ -1625,7 +1626,9 @@ transition: .2s ease;
   backdrop-filter: blur(10px);
   -webkit-backdrop-filter: blur(10px); /* Ajout du préfixe -webkit- */
   border-radius: 5px;
+  z-index: 300;
 }
+
 .optionbg_wind_btn{
   width: 100%;
   padding: 5px;
@@ -1715,6 +1718,7 @@ cursor: pointer;
   position: absolute;
   bottom: 120px;
   z-index: 250;
+  cursor: pointer;
 }
 
 .scrollButton i {
@@ -1724,6 +1728,7 @@ cursor: pointer;
 
 
 @media (max-width:617px){
+  
     .bg_choix_user{
         width: 100vw;
         height: 50vh;
@@ -1760,7 +1765,7 @@ cursor: pointer;
       padding: 0;
 
     }
-
+    
     .image_L_R{
       width: 100%;
     }
@@ -1785,6 +1790,7 @@ cursor: pointer;
     .rightespace{
       width: 100%;
       display: none;
+      height: auto;
       flex-direction: column;
     }
     .midleespace{
@@ -1994,12 +2000,15 @@ cursor: pointer;
        }
        .bottom_message{
         padding: 15px;
+        position: fixed;
+
 
        }
-
+       
        .option_header_message{
         display: flex;
        }
+       
 
 }
 
