--- a/style.css
+++ b/style.css
@@ -1529,6 +1529,7 @@ transition: .2s ease;
   align-items: center;
   border-bottom-left-radius: 10px;
   border-bottom-right-radius: 10px;
+  border-bottom: 1px solid var(--bg-color);
 }
 .header_message i{
   font-size: 2rem;
@@ -1583,6 +1584,7 @@ transition: .2s ease;
  border-top-left-radius:10px ;
  border-top-right-radius: 10px;
  z-index: 300;
+ border-top: 1px solid var(--bg-color);
 
 }
 
@@ -1610,6 +1612,7 @@ transition: .2s ease;
   justify-content: center;
   align-items: center;
   background-color: var(--bg-color);
+
 }
 .sendmessageicon{
   width: 10%;
@@ -1643,7 +1646,8 @@ transition: .2s ease;
   transition: 0.3s ease;
   border-radius: 5px;
 
-}
+}  
+
 .optionbg_wind_btn i{
 font-size: 1.2rem;
 color: var(--text-color);
@@ -1671,6 +1675,7 @@ cursor: pointer;
 }
 .mon_message {
   display: flex;
+  flex-direction: column;
   position: relative;
   left: 0;
   max-width: 48%;
@@ -1681,6 +1686,9 @@ cursor: pointer;
   border-top-right-radius: 10px;
   border-bottom-left-radius: 0px;
   border-bottom-right-radius: 10px;
+  overflow: hidden;
+  white-space: pre-wrap;
+  word-wrap: break-word;
 }
 .autreM_bg{
   width: 100%;
@@ -1701,10 +1709,12 @@ cursor: pointer;
   border-top-right-radius: 8px;
   border-bottom-left-radius: 8px;
   border-bottom-right-radius: -8px;
+  overflow: hidden; /* Cacher le texte qui dépasse */
+  word-wrap: break-word; 
 }
 .content_message img{
-  width: 100px;
-  height: 100px;
+  width: 120px;
+  height: 120px;
   border-radius: 5px;
   object-fit: cover;
 }
@@ -1729,7 +1739,46 @@ cursor: pointer;
   color: var(--second2-bg-color);
 }
 
+.creeUneRoomCabineBg{
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  right: 0;
+  z-index: 350;
+  backdrop-filter: blur(10px);
+  -webkit-backdrop-filter: blur(10px); /* Ajout du préfixe -webkit- */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.bg_cree_CabineRoom_place{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  padding: 10px;
+  background-color: var(--btn-color);
+  border-radius: 10px;
 
+}
+.bg_cree_CabineRoom_place h1{
+  font-size: 1.4rem;
+  color: var(--bg-color);
+  padding: 10px;
+}
+
+.bg_cree_CabineRoom_place i{
+  color: var(--bg-color);
+  padding: 10px;
+  font-size: 3rem;
+
+}
+.bg_cree_CabineRoom_place p{
+  color: var(--bg-color);
+  font-size: 1.2rem;
+
+}
 
 @media (max-width:617px){
   
