--- a/style.css
+++ b/style.css
@@ -1223,7 +1223,7 @@ transition: .2s ease;
   border: 1px solid var(--second-bg-color);
 }
 .btnprfil.act i{
-  color: var(--btn-color);
+  color: #007bbe;
 }
 .compeleleprofile p{
   font-size: 1.1rem;
@@ -1515,9 +1515,10 @@ transition: .2s ease;
  height: 88%;
  position: fixed;
  right: 0;
- background-color: var(--pub-bg-color);
+ background-color: var(--bg-color);
  overflow: hidden;
  z-index: 250;
+ transition: 0.3s ease;
 }
 .header_message{
   width: 100%;
@@ -1545,7 +1546,17 @@ transition: .2s ease;
   justify-content: center;
   align-items: center;
   cursor: pointer;
+  overflow: hidden;
 
+}
+.Image_header_message img{
+  width: 25px;
+  height: 25px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  object-fit: cover;
 }
 .name_header_message{
   padding: 10px;
@@ -1699,6 +1710,7 @@ cursor: pointer;
 }
 .autre_message{
   display: flex;
+  flex-direction: column;
   position: relative;
   right: 0;
   max-width: 48%;
@@ -1711,6 +1723,7 @@ cursor: pointer;
   border-bottom-right-radius: -8px;
   overflow: hidden; /* Cacher le texte qui dépasse */
   word-wrap: break-word; 
+
 }
 .content_message img{
   width: 120px;
@@ -1720,7 +1733,7 @@ cursor: pointer;
 }
 .content_message{
   overflow-y: scroll;
-}
+} 
 .scrollButton {
   display: flex;
   justify-content: center;
@@ -1779,6 +1792,108 @@ cursor: pointer;
   font-size: 1.2rem;
 
 }
+.afficheImagesBg{
+  width: 100vw;
+  height: 100vh;
+  position: fixed;
+  z-index: 400;
+  backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: blur(10px); /* Ajout du préfixe -webkit- */
+  top: 0;
+  left: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: no-drop;
+
+}
+
+.afficheImage_place{
+  position: fixed;
+  top: 15vh;
+  left: 15vw;
+  width: 70vw;
+  height: 70vh;
+  background-color: var(--second2-bg-color);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 450;
+
+}
+.afficheImage_place img{
+  position: fixed;
+  top: 15vh;
+  left: 15vw;
+  width: 70vw;
+  height: 70vh;
+  z-index: 460;
+  object-fit: scale-down;
+
+
+}
+
+
+/*-------------------------------liste message user*/
+.listemesagebg{
+  width: 100%;
+  height: 100%;
+  background-color: var(--pub-bg-color);
+  display: flex;
+  flex-direction: column;
+  padding: 20px;
+}
+.amisbgmessage{
+  width: 100%;
+  padding: 10px;
+  display: flex;
+  flex-direction: row;
+  justify-content: start;
+  align-items: center;
+  background-color: var(--pub-bg-color);
+  border-radius: 5px;
+  border-bottom: 1px solid var(--second2-bg-color);
+  transition: 0.3s ease;
+
+}
+.amisbgmessage:hover{
+ background-color: var(--btn-color);
+}
+.imageamismessagebg{
+  width: 26px;
+  height: 26px;
+  overflow: hidden;
+  border-radius: 50%;
+  background-color: var(--second2-bg-color);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.imageamismessagebg img{
+  width: 25px;
+  height: 25px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  object-fit: cover;
+}
+.nameamismessagebg h1{
+  font-size: 1.3rem;
+  color: var(--second2-bg-color);
+  margin-left: 5px;
+  
+}
+
+
+
+
+
+
+
+
+
+
+
 
 @media (max-width:617px){
   
@@ -2066,6 +2181,24 @@ cursor: pointer;
         bottom: 0;
         position: absolute;
 
+      }
+
+      .afficheImage_place{
+        top: 15vh;
+        left: 2.5vw;
+        width: 95vw;
+        height: 70vh;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        
+      
+      }
+      .afficheImage_place img{
+        top: 15vh;
+        left: 2.5vw;
+        width: 95vw;
+        height: 70vh;
       }
 
       
