--- a/style.css
+++ b/style.css
@@ -1518,7 +1518,7 @@ transition: .2s ease;
  background-color: var(--bg-color);
  overflow: hidden;
  z-index: 250;
- transition: 0.3s ease;
+ transition: 0.4s ease;
 }
 .header_message{
   width: 100%;
@@ -1531,6 +1531,7 @@ transition: .2s ease;
   border-bottom-left-radius: 10px;
   border-bottom-right-radius: 10px;
   border-bottom: 1px solid var(--bg-color);
+  position: absolute;
 }
 .header_message i{
   font-size: 2rem;
@@ -1596,6 +1597,7 @@ transition: .2s ease;
  border-top-right-radius: 10px;
  z-index: 300;
  border-top: 1px solid var(--bg-color);
+ transition: .5s ease;
 
 }
 
@@ -1634,15 +1636,14 @@ transition: .2s ease;
 .optionbg_wind{
   position: absolute;
   right: 0;
-  display: none;
   width: 150px;
   padding: 10px;
   flex-direction: column;
-  background-color: #bcc9c148;
+  background-color: #93ab9c48;
   backdrop-filter: blur(10px);
   -webkit-backdrop-filter: blur(10px); /* Ajout du préfixe -webkit- */
   border-radius: 5px;
-  z-index: 300;
+  z-index: 450;
 }
 
 .optionbg_wind_btn{
@@ -1677,6 +1678,7 @@ cursor: pointer;
   flex-direction: column;
   overflow-y: scroll;
   padding: 10px;
+  height: 100%;
 }
 .monM_bg{
   width: 100%;
