--- a/style.css
+++ b/style.css
@@ -1122,6 +1122,7 @@ transition: .2s ease;
   background-color: var(--bg-color);
   justify-content: space-around;
   align-items: center;
+  transition: .4s ease;
 }
 .navbar_buttom i{
   color: var(--second2-bg-color);
@@ -1521,6 +1522,7 @@ transition: .2s ease;
  transition: 0.4s ease;
 }
 .header_message{
+  z-index: 300;
   width: 100%;
   padding: 10px;
   height: 50px;
@@ -1679,6 +1681,7 @@ cursor: pointer;
   overflow-y: scroll;
   padding: 10px;
   height: 100%;
+  position: absolute;
 }
 .monM_bg{
   width: 100%;
@@ -1907,7 +1910,7 @@ cursor: pointer;
  height: 25px;
  object-fit: cover;
 
-}
+} 
 .title_listemesagebg h1{
   font-size: 1.2rem;
   font-weight: 700;
