--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css");
+@import url('https://fonts.googleapis.com/css2?family=Anton&family=Grape+Nuts&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 *{
     margin: 0;
     padding: 0; 
@@ -65,7 +66,7 @@ section{
 */
 
 
-/*---------------------------------------------watingDiv.---------------------------------------------*/
+/*--------logoBg-------------------------------------watingDiv.---------------------------------------------*/
 .watingDiv{
     width: 100vw;
     height:100vh;
@@ -86,7 +87,7 @@ section{
     height: 70px;
     display: flex;
     justify-content: center;
-    align-items: center;   
+    align-items: center;  
      
 }
 .caeee_logo{
@@ -142,7 +143,6 @@ section{
 }
 
 
-
 .bg_choix_user{
     width: 50vw;
     height: 50vh;
@@ -156,6 +156,12 @@ section{
     justify-content: space-around;
     align-items: center;
     transition: 1s ease;
+}
+.bg_choix_user{
+  color: var(--second2-bg-color);
+}
+.bg_choix_user p{
+  font-size: 1.2rem;
 }
 .bgmedcinpatient{
     width: 40%;
@@ -366,7 +372,7 @@ input:focus {
     color: var(--second2-bg-color); 
 
   }
-
+  
   .btn.souvgarder{
     display: block; 
     width: 150px; 
@@ -1939,27 +1945,107 @@ font-size: 1rem;
 
 
 }
+.bg_acc{
+  max-width: 600px;
+  padding: 8px;
+  background-color: var(--second-bg-color);
+}
+.bg_acc img{
+  width: 150px;
+}
 
+#animated-text {
+  font-size: 18px;
+  white-space: pre-line;
+}
 
+#typed-text{
+  font-family: "Grape Nuts", cursive;
+  font-weight: 600;
+  font-style: normal;
+}
+.buttonnext h1{
+  font-family: "Grape Nuts", cursive;
+  font-weight: 600;
+  font-style: normal;
+}
+#text-bar {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 22px;
+  background-color: #f5f5f5;
+  width: 0;
+}
+.language-selector img{
+  width: 200px;
+}
+.buttonnext{
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  opacity: 0;
+  transition: 1s ease;
+}
+.language-selector{
+  width: 100%;
+  height: 50vh;
+  padding: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  color: var(--second2-bg-color);
+}
+.text-container{
+  opacity: 0;
+  transition: 1s ease;
+}
 
+.language-selector select{
+  background-color: var(--pub-bg-color);
+  color: var(--second2-bg-color);
+  font-size: 1.4rem;
+  padding: 5px;
+  border-radius: 3px;
+  border: 1px solid var(--second2-bg-color);
+}
+.tomedcinePage {
+  cursor: pointer;
+  transition: .3s ease;
+  font-family: "Grape Nuts", cursive;
+  font-weight: 500;
+  font-style: normal;
 
+}
+ .tomedcinePage :hover{
+  cursor: pointer;
 
+  text-decoration: underline; /* Souligne le texte */
+  color: var(--btnHover-color);
+}
 
 @media (max-width:617px){
   
     .bg_choix_user{
         width: 100vw;
-        height: 50vh;
+        height: 100%;
         background-color: var(--bg-color);
         position: absolute;
         top: 100vh;
         display: flex;
         flex-direction: row;
-        padding: 20px;
         justify-content: start;
         align-items: center;
 
     }
+    .bg_choix_user span{
+      font-size: 1.3rem;
+
+    }
+
+
     .bgmedcinpatient{
         width: 100%;
         height: auto;
@@ -2250,7 +2336,7 @@ font-size: 1rem;
         width: 95vw;
         height: 70vh;
       }
-
+      
       
 
 }
