--- a/style.css
+++ b/style.css
@@ -2017,6 +2017,7 @@ font-size: 1rem;
   font-family: "Grape Nuts", cursive;
   font-weight: 500;
   font-style: normal;
+  padding: 10px;
 
 }
  .tomedcinePage :hover{
