--- a/style.css
+++ b/style.css
@@ -1997,6 +1997,7 @@ font-size: 1rem;
   flex-direction: column;
   color: var(--second2-bg-color);
 }
+
 .text-container{
   opacity: 0;
   transition: 1s ease;
@@ -2021,6 +2022,8 @@ font-size: 1rem;
   font-weight: 600;
   font-style: normal;
   padding: 10px;
+  text-decoration: underline; /* Souligne le texte */
+
 
 }
  .tomedcinePage :hover{
@@ -2030,7 +2033,95 @@ font-size: 1rem;
   color: var(--btnHover-color);
 }
 
+.suivant4{
+  margin-top: 5px;
+  cursor: pointer;
+  transition: .3s ease;
+  font-weight: 600;
+  font-style: normal;
+  padding: 10px;
+  text-decoration: underline; /* Souligne le texte */
+}
+.suivant4 :hover{
+  cursor: pointer;
+  text-decoration: underline; 
+  color: var(--btnHover-color);
+}
+
+.quinousbg{
+  width: 100vw;
+  height: 100vh;
+  position: absolute;
+  left: 0;
+  top: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: blur(10px); /* Ajout du préfixe -webkit- */
+    z-index: 1000;
+  
+  }
+
+  .quinousbg2{
+    display: flex;
+    width: 90%;
+    height: 90%;
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+    align-items: start;
+    padding: 20px;
+    background-color: var(--bg-color);
+    border: 1px solid var(--second2-bg-color);
+    border-radius: 6px;
+    overflow-y: scroll;
+  }
+
+  .quinousbgHeader{
+    width: 100%;
+    padding: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    color: var(--second2-bg-color);
+  }
+  .quinousbgHeadertext{
+    font-size: 1.4rem;
+    color: var(--second2-bg-color);
+  }
+
+  .quinousbgHeader img{
+    width: 80px;
+
+  }
+  .pesentationquinous{
+    color: var(--second2-bg-color);
+    font-size: 1.3rem;
+    font-weight: 500;
+
+  }
+  .divboxcheck{
+    display: flex;
+    flex-direction: row;
+  }
+  .divboxcheck input{
+    width: auto;
+    margin: 10px;
+
+  }
+  .quinousbg2 label{
+    margin: 10px;
+    display: flex;
+    justify-content: center;
+    font-size: 1.3rem;
+    font-weight: 500;
+    color: var(--second2-bg-color);
+  }
 @media (max-width:617px){
+
+
   
     .bg_choix_user{
         width: 100vw;
